# universe

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
data/applications/: io.universe.Universe.desktop  universe-open.desktop
data/mime/: universe.xml
docs/: ARCHITECTURE.md  DEPENDENCIES.md
packaging/: install.sh  nfpm.yaml  universe-launcher.py
packaging/debian/: control.in  postinst  postrm
src/universe/: __init__.py  __main__.py  cli.py
src/universe/core/: __init__.py  appimage.py  autostart.py  config.py  desktop_entry.py  discover.py  icons.py  integrator.py  paths.py  updater.py
src/universe/ui/: app.py  app_card.py  file_dialog.py  main_window.py  open_dialog.py  settings_dialog.py
tests/: __init__.py  test_appimage.py  test_config.py  test_desktop_entry.py
