[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "universe"
version = "0.1.1"
description = "AppImage integrator and manager for Linux"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "ProgramingPro2", email = "ProgramingPro2@users.noreply.github.com" }]
dependencies = []

[project.scripts]
universe = "universe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
universe = ["py.typed"]
